--- a/landing.html
+++ b/landing.html
@@ -59,13 +59,12 @@
                     <section class='primary-section'>
                         <h1>Summary: Latitude vs. X</h1>
                         <hr>
-                        <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+                        <img src="WebVisualizations/visualizations/Fig1.png" alt="..." class="img-thumbnail">
                         <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. 
                             <br>
                             <br> 
                             After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
-                        </p>
-                        
+                        </p>   
                     </section>
                 </div>
                 <div class='col-md-4' >
@@ -75,18 +74,18 @@
                         <div class ='containeer'>
                             <div class ='row'>
                                 <div class = 'col-md-6'>
-                                    <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+                                    <img src="WebVisualizations/visualizations/Fig1.png" alt="..." class="img-thumbnail">
                                 </div>
                                 <div class = 'col-md-6'>
-                                    <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+                                    <img src="WebVisualizations/visualizations/Fig2.png" alt="..." class="img-thumbnail">
                                 </div>
                             </div>
                             <div class ='row'>
                                 <div class = 'col-md-6'>
-                                    <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+                                    <img src="WebVisualizations/visualizations/Fig3.png" alt="..." class="img-thumbnail">
                                 </div>
                                 <div class = 'col-md-6'>
-                                    <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+                                    <img src="WebVisualizations/visualizations/Fig4.png" alt="..." class="img-thumbnail">
                                 </div>
                             </div>
 
