Adding html pages and update to style sheet

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -17,7 +20,8 @@
         <div class='container'>
             <div class='row'>
                 <div class='col-md-3 left-header'>
-                    <h2>Latitude</h2>
+                    <h2><a class='logo' href='index.html'>Latitude</a></h2>
+                    
                 </div>
                 <div class='col-md-6' >
                 </div>
@@ -34,16 +38,16 @@
                                   Plots
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                  <a class="dropdown-item" href="#">Action</a>
-                                  <a class="dropdown-item" href="#">Another action</a>
-                                  <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" href="#">Something else here</a>
+                                  <a class="dropdown-item" href="temperature.html">Temperature</a>
+                                  <a class="dropdown-item" href="humidity.html">Humidity</a>
+                                  <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+                                  <a class="dropdown-item" href="wind.html">Wind Speed</a>
                                 </div>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Comparison</a>
+                            <a class="nav-link" href="comparisons.html">Comparison</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Data</a>
+                            <a class="nav-link" href="data.html">Data</a>
                             </li>
                         </ul>
                         </div>
@@ -57,14 +61,13 @@
             <div class='row'>
                 <div class='col-md-8'>
                     <section class='primary-section'>
-                        <h1>Summary: Latitude vs. X</h1>
+                        <h1>Cloudiness</h1>
                         <hr>
-                        <img src="WebVisualizations/visualizations/Fig1.png" alt="..." class="img-thumbnail">
-                        <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. 
-                            <br>
-                            <br> 
-                            After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
-                        </p>   
+                        <div class='main-panel'>
+                            <img src="WebVisualizations/assets/Fig3.png" alt="lat vs cloudiness" class="primary-image">
+                            <b></b>
+                            <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
+                        </div>
                     </section>
                 </div>
                 <div class='col-md-4' >
@@ -74,18 +77,26 @@
                         <div class ='containeer'>
                             <div class ='row'>
                                 <div class = 'col-md-6'>
-                                    <img src="WebVisualizations/visualizations/Fig1.png" alt="..." class="img-thumbnail">
+                                    <a href='temperature.html'>
+                                        <img src="WebVisualizations/assets/Fig1.png" alt="lat vs temp" class="img-thumbnail">
+                                    </a>
                                 </div>
                                 <div class = 'col-md-6'>
-                                    <img src="WebVisualizations/visualizations/Fig2.png" alt="..." class="img-thumbnail">
+                                    <a href ='humidity.html'>
+                                        <img src="WebVisualizations/assets/Fig2.png" alt="lat vs cloudiness" class="img-thumbnail">
+                                    </a>
                                 </div>
                             </div>
                             <div class ='row'>
                                 <div class = 'col-md-6'>
-                                    <img src="WebVisualizations/visualizations/Fig3.png" alt="..." class="img-thumbnail">
+                                    <a href='cloudiness.html'>
+                                        <img src="WebVisualizations/assets/Fig3.png" alt='lat vs humidity' class="img-thumbnail">
+                                    </a>
                                 </div>
                                 <div class = 'col-md-6'>
-                                    <img src="WebVisualizations/visualizations/Fig4.png" alt="..." class="img-thumbnail">
+                                    <a href='windspeed.html'>
+                                        <img src="WebVisualizations/assets/Fig4.png" alt="lat vs windspeed " class="img-thumbnail">
+                                    </a>
                                 </div>
                             </div>
 
@@ -102,7 +113,7 @@
             <div class='row'>
                 <div class='col-md-12'>
                     <section>
-                        <p>Copywrite Grant Thompson 2020</p>
+                        <p>&copy; 2020 Grant Thompson</p>
                     </section>
                 </div>
             </div>
