style changes and filling out html

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -64,7 +64,7 @@
                         <h1>Cloudiness</h1>
                         <hr>
                         <div class='main-panel'>
-                            <img src="WebVisualizations/assets/Fig3.png" alt="lat vs cloudiness" class="primary-image">
+                            <img src="WebVisualizations/assets/Fig3.png" alt="lat vs cloudiness" class="primary-image img-fluid">
                             <b></b>
                             <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
                         </div>
@@ -90,7 +90,7 @@
                             <div class ='row'>
                                 <div class = 'col-md-6'>
                                     <a href='cloudiness.html'>
-                                        <img src="WebVisualizations/assets/Fig3.png" alt='lat vs humidity' class="img-thumbnail">
+                                        <img src="WebVisualizations/assets/Fig3.png" alt='lat vs humidity' class="img-thumbnail emphasis">
                                     </a>
                                 </div>
                                 <div class = 'col-md-6'>
