--- a/comparisons.html
+++ b/comparisons.html
@@ -72,7 +72,7 @@
                     <section class='comparison-charts'>
                         <h3> vs. Max Temperature</h3>
                         <a href='temperature.html'>
-                            <img src="WebVisualizations/assets/Fig1.png" alt="link to lat vs temp" class="img-compare">
+                            <img src="WebVisualizations/assets/Fig1.png" alt="link to lat vs temp" class="img-compare img-fluid">
                         </a>
                     </section>
                 </div>
@@ -80,7 +80,7 @@
                     <section class='comparison-charts'>
                         <h3>vs. Humidity</h3>
                         <a href='humidity.html'>
-                            <img src="WebVisualizations/assets/Fig2.png" alt="link to lat vs humidity" class="img-compare">
+                            <img src="WebVisualizations/assets/Fig2.png" alt="link to lat vs humidity" class="img-compare img-fluid">
                         </a>
                     </section>
                 </div>
@@ -90,7 +90,7 @@
                     <section class='comparison-charts'>
                         <h3>vs. Cloudiness</h3>
                         <a href='cloudiness.html'>
-                            <img src="WebVisualizations/assets/Fig3.png" alt="link to lat vs cloudiness" class="img-compare">
+                            <img src="WebVisualizations/assets/Fig3.png" alt="link to lat vs cloudiness" class="img-compare img-fluid">
                         </a>
                     </section>
                 </div>
@@ -98,7 +98,7 @@
                     <section class='comparison-charts'>
                         <h3>vs. Wind Speed</h3>
                         <a href = 'windspeed.html'>
-                            <img src="WebVisualizations/assets/Fig4.png" alt="link to lat vs wind speed" class="img-compare">
+                            <img src="WebVisualizations/assets/Fig4.png" alt="link to lat vs wind speed" class="img-compare img-fluid">
                         </a>
                     </section>
                 </div>
