--- a/humidity.html
+++ b/humidity.html
@@ -64,7 +64,7 @@
                         <h1>Humidity</h1>
                         <hr>
                         <div class='main-panel'>
-                            <img src="WebVisualizations/assets/Fig2.png" alt="lat vs humidity" class="primary-image">
+                            <img src="WebVisualizations/assets/Fig2.png" alt="lat vs humidity" class="primary-image img-fluid">
                             <b></b>
                             <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
                         </div>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class = 'col-md-6'>
                                     <a href ='humidity.html'>
-                                        <img src="WebVisualizations/assets/Fig2.png" alt="lat vs cloudiness" class="img-thumbnail">
+                                        <img src="WebVisualizations/assets/Fig2.png" alt="lat vs cloudiness" class="img-thumbnail emphasis">
                                     </a>
                                 </div>
                             </div>
