--- a/data.html
+++ b/data.html
@@ -61,8 +61,8 @@
         <hr>
         <p>The following table includes all of the data used for plotting during this project.</p>
         <br>
-        <div class='container'>
-            <table border="1" class="dataframe">
+        <div class='container table-responsive'>
+            <table border="1" class="table table-striped table-hover">
                 <thead>
                   <tr style="text-align: right;">
                     <th></th>
