--- a/temperature.html
+++ b/temperature.html
@@ -64,7 +64,7 @@
                         <h1>Max Temperature</h1>
                         <hr>
                         <div class='main-panel'>
-                            <img src="WebVisualizations/assets/Fig1.png" alt="lat vs temp" class="primary-image">
+                            <img src="WebVisualizations/assets/Fig1.png" alt="lat vs temp" class="primary-image img-fluid">
                             <b></b>
                             <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
                         </div>
@@ -78,7 +78,7 @@
                             <div class ='row'>
                                 <div class = 'col-md-6'>
                                     <a href='temperature.html'>
-                                        <img src="WebVisualizations/assets/Fig1.png" alt="lat vs temp" class="img-thumbnail">
+                                        <img src="WebVisualizations/assets/Fig1.png" alt="lat vs temp" class="img-thumbnail emphasis">
                                     </a>
                                 </div>
                                 <div class = 'col-md-6'>
