--- a/windspeed.html
+++ b/windspeed.html
@@ -64,7 +64,7 @@
                         <h1>Wind Speed</h1>
                         <hr>
                         <div class='main-panel'>
-                            <img src="WebVisualizations/assets/Fig4.png" alt="lat vs wind speed" class="primary-image">
+                            <img src="WebVisualizations/assets/Fig4.png" alt="lat vs wind speed" class="primary-image img-fluid">
                             <b></b>
                             <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
                         </div>
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class = 'col-md-6'>
                                     <a href='windspeed.html'>
-                                        <img src="WebVisualizations/assets/Fig4.png" alt="lat vs windspeed " class="img-thumbnail">
+                                        <img src="WebVisualizations/assets/Fig4.png" alt="lat vs windspeed " class="img-thumbnail emphasis">
                                     </a>
                                 </div>
                             </div>
