cleaned up analysis sections

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -66,7 +66,7 @@
                         <div class='main-panel'>
                             <img src="WebVisualizations/assets/Fig3.png" alt="lat vs cloudiness" class="primary-image img-fluid">
                             <b></b>
-                            <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
+                            <p>Latitude vs cloudiness resulted in r-squared values of 0.22 and 0.03, respectively. The low r values indicate a very weak positive relationship between latitude and cloudiness. There is likely no correlation. </p>
                         </div>
                     </section>
                 </div>
