--- a/humidity.html
+++ b/humidity.html
@@ -66,7 +66,7 @@
                         <div class='main-panel'>
                             <img src="WebVisualizations/assets/Fig2.png" alt="lat vs humidity" class="primary-image img-fluid">
                             <b></b>
-                            <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
+                            <p>One might expect to see a correlation between humidity and latitude. After all, when you think of the equator, hot, humid rain forests often come to mind.  It may then be somewhat of a surprise to see this chart, the eye test alone indicates very little correlation. Running a linear regression model on the northern and southern hemisphere results in an r-squared of 0.35 and 0.15, respectively.  In other words, much of a correlation. </p>
                         </div>
                     </section>
                 </div>
