--- a/windspeed.html
+++ b/windspeed.html
@@ -66,7 +66,7 @@
                         <div class='main-panel'>
                             <img src="WebVisualizations/assets/Fig4.png" alt="lat vs wind speed" class="primary-image img-fluid">
                             <b></b>
-                            <p>As expected, the weather becomes significantly warmer as one approaches the equator at zero degrees latitude. More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year. This is likely due to the tilt of the earth at the time of the year this data was generated.</p>
+                            <p>Based on the graph, wind speed doe not appear to be correlated to latitude. This is confirmed when we run a linear regression on the two hemispheres, with an r-squared value of 0.02 and -0.14 for the northern and southern hemispheres, respectively. </p>
                         </div>
                     </section>
                 </div>
